# probs

./: .gitignore  LICENSE  README.md  battle.py  go_probs.py  helpers.py  play_chess_qt.py  play_chess_qt_board.py  probs_impl_common.py  probs_impl_main.py  probs_impl_self_play.py  probs_impl_train_q.py  requirements.txt
probs_chess_cpp/: CMakeLists.txt  CMakeLists_cloud.txt  train_example_config.yaml
probs_chess_cpp/configs/: battle_example.yaml  battle_vs_random.yaml  train_chess.yaml  train_example.yaml  uci_engine.yaml  uci_engine_copy.yaml
probs_chess_cpp/include/: ConfigParser.h
probs_chess_cpp/py_binding/: gen_py_bindings.py
probs_chess_cpp/scripts/: compare_players.py  send_logs_to_tf.py  test_chess_correctness.py  test_uci_engine.py
probs_chess_cpp/src/: ConfigParser.cpp  main.cpp
probs_chess_cpp/src/chess/: bitboard.cpp  bitboard.h  board.cpp  board.h  game_tree.cpp  game_tree.h  policy_map.cpp  policy_map.h  position.cpp  position.h
probs_chess_cpp/src/infra/: agent.cpp  agent.h  battle.cpp  battle.h  config_parser.cpp  config_parser.h  env_player.cpp  env_player.h  player.cpp  player.h  tests.h  uci_impl.cpp  uci_impl.h  uci_player.cpp  uci_player.h
probs_chess_cpp/src/neural/: encoder.cpp  encoder.h  network.cpp  network.h  torch_encoder.cpp  torch_encoder.h
probs_chess_cpp/src/python/: definitions.h  generated_bindings.cpp
probs_chess_cpp/src/training/: model_keeper.cpp  model_keeper.h  q_train.cpp  q_train.h  train.cpp  train.h  training_helpers.cpp  training_helpers.h  v_train.cpp  v_train.h
probs_chess_cpp/src/utils/: bititer.h  (+8 more)
(+31 files in other folders)
